{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 325,
  "lineage": "22f5bb72-0dbd-47ac-fa68-533cc1a89441",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "WebServerilb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/WebServerilb/frontendIPConfigurations/WebServerLBipconfig",
                "name": "WebServerLBipconfig",
                "private_ip_address": "10.99.1.11",
                "private_ip_address_allocation": "Static",
                "subnet_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/virtualNetworks/Labvnet/subnets/Internal"
              }
            ],
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/WebServerilb",
            "location": "australiaeast",
            "name": "WebServerilb",
            "private_ip_address": "10.99.1.11",
            "private_ip_addresses": [
              "10.99.1.11"
            ],
            "resource_group_name": "tf-rg-gw-web",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.Internal_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "externallb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/externallb/frontendIPConfigurations/ExternallbPublicIPAddress",
                "name": "ExternallbPublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/publicIPAddresses/albvip1"
              }
            ],
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/externallb",
            "location": "australiaeast",
            "name": "externallb",
            "resource_group_name": "tf-rg-gw-web",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_public_ip.albvip1",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "internallb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/internallb/frontendIPConfigurations/InternalLBipconfig",
                "name": "InternalLBipconfig",
                "private_ip_address": "10.99.1.10",
                "private_ip_address_allocation": "Static",
                "subnet_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/virtualNetworks/Labvnet/subnets/Internal"
              }
            ],
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/internallb",
            "location": "australiaeast",
            "name": "internallb",
            "private_ip_address": "10.99.1.10",
            "private_ip_addresses": [
              "10.99.1.10"
            ],
            "resource_group_name": "tf-rg-gw-web",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.Internal_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bpepool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/externallb/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/externallb",
            "name": "BackEndAddressPool",
            "resource_group_name": "tf-rg-gw-web"
          },
          "dependencies": [
            "azurerm_lb.externallb",
            "azurerm_public_ip.albvip1",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bpepoolinternal",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/internallb/backendAddressPools/BackEndAddressPoolinternal",
            "loadbalancer_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/internallb",
            "name": "BackEndAddressPoolinternal",
            "resource_group_name": "tf-rg-gw-web"
          },
          "dependencies": [
            "azurerm_lb.internallb",
            "azurerm_resource_group.rg",
            "azurerm_subnet.Internal_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bpepoolwebserver",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/WebServerilb/backendAddressPools/BackEndAddressPoolWebservers",
            "loadbalancer_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/WebServerilb",
            "name": "BackEndAddressPoolWebservers",
            "resource_group_name": "tf-rg-gw-web"
          },
          "dependencies": [
            "azurerm_lb.WebServerilb",
            "azurerm_resource_group.rg",
            "azurerm_subnet.Internal_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "WebServerprobei",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/WebServerilb/probes/http",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/WebServerilb",
            "name": "http",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "tf-rg-gw-web"
          },
          "dependencies": [
            "azurerm_lb.WebServerilb",
            "azurerm_resource_group.rg",
            "azurerm_subnet.Internal_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "chkpprobe",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/externallb/probes/chkp-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/externallb",
            "name": "chkp-probe",
            "number_of_probes": 2,
            "port": 8117,
            "protocol": "Tcp",
            "resource_group_name": "tf-rg-gw-web"
          },
          "dependencies": [
            "azurerm_lb.externallb",
            "azurerm_public_ip.albvip1",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "chkpprobei",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/internallb/probes/chkp-probe-internal",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/internallb",
            "name": "chkp-probe-internal",
            "number_of_probes": 2,
            "port": 8117,
            "protocol": "Tcp",
            "resource_group_name": "tf-rg-gw-web"
          },
          "dependencies": [
            "azurerm_lb.internallb",
            "azurerm_resource_group.rg",
            "azurerm_subnet.Internal_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "WebServerlbrule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/WebServerilb/backendAddressPools/BackEndAddressPoolWebservers",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/WebServerilb/frontendIPConfigurations/WebServerLBipconfig",
            "frontend_ip_configuration_name": "WebServerLBipconfig",
            "frontend_port": 80,
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/WebServerilb/loadBalancingRules/WebServerlbName",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/WebServerilb",
            "name": "WebServerlbName",
            "probe_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/WebServerilb/probes/http",
            "protocol": "Tcp",
            "resource_group_name": "tf-rg-gw-web"
          },
          "dependencies": [
            "azurerm_lb.WebServerilb",
            "azurerm_lb_backend_address_pool.bpepoolwebserver",
            "azurerm_lb_probe.WebServerprobei",
            "azurerm_resource_group.rg",
            "azurerm_subnet.Internal_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "externallbrule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/externallb/backendAddressPools/BackEndAddressPool",
            "backend_port": 8090,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/externallb/frontendIPConfigurations/ExternallbPublicIPAddress",
            "frontend_ip_configuration_name": "ExternallbPublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/externallb/loadBalancingRules/xlbName",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/externallb",
            "name": "xlbName",
            "probe_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/externallb/probes/chkp-probe",
            "protocol": "Tcp",
            "resource_group_name": "tf-rg-gw-web"
          },
          "dependencies": [
            "azurerm_lb.externallb",
            "azurerm_lb_backend_address_pool.bpepool",
            "azurerm_lb_probe.chkpprobe",
            "azurerm_public_ip.albvip1",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "internallbrule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/internallb/backendAddressPools/BackEndAddressPoolinternal",
            "backend_port": 0,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/internallb/frontendIPConfigurations/InternalLBipconfig",
            "frontend_ip_configuration_name": "InternalLBipconfig",
            "frontend_port": 0,
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/internallb/loadBalancingRules/ilbName",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/internallb",
            "name": "ilbName",
            "probe_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/internallb/probes/chkp-probe-internal",
            "protocol": "All",
            "resource_group_name": "tf-rg-gw-web"
          },
          "dependencies": [
            "azurerm_lb.internallb",
            "azurerm_lb_backend_address_pool.bpepoolinternal",
            "azurerm_lb_probe.chkpprobei",
            "azurerm_resource_group.rg",
            "azurerm_subnet.Internal_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ubuntuDMZ1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/networkInterfaces/ubuntuDMZ1",
            "ip_configuration": [
              {
                "name": "ubuntuDMZ1Configuration",
                "primary": true,
                "private_ip_address": "10.99.11.10",
                "private_ip_address_allocation": "static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/virtualNetworks/Labvnet/subnets/DMZ1"
              }
            ],
            "location": "australiaeast",
            "name": "ubuntuDMZ1",
            "private_ip_address": "10.99.11.10",
            "private_ip_addresses": [
              "10.99.11.10"
            ],
            "resource_group_name": "tf-rg-gw-web"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.DMZ1_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ubuntuDMZ2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/networkInterfaces/ubuntuDMZ2",
            "ip_configuration": [
              {
                "name": "ubuntuDMZ2Configuration",
                "primary": true,
                "private_ip_address": "10.99.12.10",
                "private_ip_address_allocation": "static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/virtualNetworks/Labvnet/subnets/DMZ2"
              }
            ],
            "location": "australiaeast",
            "name": "ubuntuDMZ2",
            "private_ip_address": "10.99.12.10",
            "private_ip_addresses": [
              "10.99.12.10"
            ],
            "resource_group_name": "tf-rg-gw-web"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.DMZ2_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "backendwebserver_assoc1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/WebServerilb/backendAddressPools/BackEndAddressPoolWebservers",
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/networkInterfaces/ubuntuDMZ1/ipConfigurations/ubuntuDMZ1Configuration|/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/WebServerilb/backendAddressPools/BackEndAddressPoolWebservers",
            "ip_configuration_name": "ubuntuDMZ1Configuration",
            "network_interface_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/networkInterfaces/ubuntuDMZ1"
          },
          "dependencies": [
            "azurerm_lb.WebServerilb",
            "azurerm_lb_backend_address_pool.bpepoolwebserver",
            "azurerm_network_interface.ubuntuDMZ1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.DMZ1_subnet",
            "azurerm_subnet.Internal_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "backendwebserver_assoc2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/WebServerilb/backendAddressPools/BackEndAddressPoolWebservers",
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/networkInterfaces/ubuntuDMZ2/ipConfigurations/ubuntuDMZ2Configuration|/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/loadBalancers/WebServerilb/backendAddressPools/BackEndAddressPoolWebservers",
            "ip_configuration_name": "ubuntuDMZ2Configuration",
            "network_interface_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/networkInterfaces/ubuntuDMZ2"
          },
          "dependencies": [
            "azurerm_lb.WebServerilb",
            "azurerm_lb_backend_address_pool.bpepoolwebserver",
            "azurerm_network_interface.ubuntuDMZ2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.DMZ2_subnet",
            "azurerm_subnet.Internal_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "scalesetnsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/networkSecurityGroups/PermissiveSecurityGroup",
            "location": "australiaeast",
            "name": "PermissiveSecurityGroup",
            "resource_group_name": "tf-rg-gw-web",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Permissive",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "albvip1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/publicIPAddresses/albvip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.53.81.197",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "albvip1",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "tf-rg-gw-web",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "DMZ1RT",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/routeTables/DMZ1RT",
            "location": "australiaeast",
            "name": "DMZ1RT",
            "resource_group_name": "tf-rg-gw-web",
            "route": [
              {
                "address_prefix": "10.99.0.0/16",
                "name": "internal",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "0.0.0.0/0",
                "name": "Internet",
                "next_hop_in_ip_address": "10.99.1.10",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "DMZ2RT",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/routeTables/DMZ2RT",
            "location": "australiaeast",
            "name": "DMZ2RT",
            "resource_group_name": "tf-rg-gw-web",
            "route": [
              {
                "address_prefix": "10.99.11.0/24",
                "name": "DMZ1",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.99.12.0/24",
                "name": "DMZ2",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "0.0.0.0/0",
                "name": "Internet",
                "next_hop_in_ip_address": "10.99.1.10",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "DMZ1_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.99.11.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/virtualNetworks/Labvnet/subnets/DMZ1",
            "name": "DMZ1",
            "resource_group_name": "tf-rg-gw-web",
            "virtual_network_name": "Labvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "DMZ2_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.99.12.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/virtualNetworks/Labvnet/subnets/DMZ2",
            "name": "DMZ2",
            "resource_group_name": "tf-rg-gw-web",
            "virtual_network_name": "Labvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "External_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.99.0.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/virtualNetworks/Labvnet/subnets/External",
            "name": "External",
            "resource_group_name": "tf-rg-gw-web",
            "virtual_network_name": "Labvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Internal_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.99.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/virtualNetworks/Labvnet/subnets/Internal",
            "name": "Internal",
            "resource_group_name": "tf-rg-gw-web",
            "virtual_network_name": "Labvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "DMZ1_Subnet_Assoc",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/virtualNetworks/Labvnet/subnets/DMZ1",
            "route_table_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/routeTables/DMZ1RT",
            "subnet_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/virtualNetworks/Labvnet/subnets/DMZ1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.DMZ1RT",
            "azurerm_subnet.DMZ1_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "DMZ2_Subnet_Assoc",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/virtualNetworks/Labvnet/subnets/DMZ2",
            "route_table_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/routeTables/DMZ2RT",
            "subnet_id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/virtualNetworks/Labvnet/subnets/DMZ2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.DMZ2RT",
            "azurerm_subnet.DMZ2_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.99.0.0/16"
            ],
            "id": "/subscriptions/3531d89f-0690-48b5-914e-484cc056f721/resourceGroups/tf-rg-gw-web/providers/Microsoft.Network/virtualNetworks/Labvnet",
            "location": "australiaeast",
            "name": "Labvnet",
            "resource_group_name": "tf-rg-gw-web"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}